fixing gaps

--- a/app/assets/stylesheets/tatoos.scss
+++ b/app/assets/stylesheets/tatoos.scss
@@ -13,8 +13,8 @@
 	width: 100%;
 }
 .tatoo-inner a img {
-	width: 110%;
-	margin: -12px;
+  width: 106%;
+  margin: -25% -3%;
 }
 .buy-tatoo {
 	margin: 10px;
